...
            padding: const EdgeInsets.all(16.0),
            child: Column(
              spacing: 16,
              children: [
                TextField(
                  decoration: InputDecoration(
                    labelText: 'Search',
                    hintText: 'Enter the breed name',
                    border: OutlineInputBorder(),
                  ),
                  onChanged: (query) {
                    provider.filterCatBreeds(query);
                  },
...
