...
              child: SingleChildScrollView(
                child: Column(
                  crossAxisAlignment: CrossAxisAlignment.start,
                  spacing: 4,
                  children: [
                    Text(
                      'Description:',
                      style: TextStyleUtils.boldBodyLarge(context),
                    ),
                    Text(
                      catBreed.description,
                      style: TextStyleUtils.bodyLarge(context),
                    ),
...
