appId: com.example.cats_app

---
- launchApp:
    stopApp: false

- assertVisible: "Search"

- tapOn: "Search"
- inputText: "Donskoy"
- hideKeyboard

- tapOn: "Donskoy
    Origin:
    Russia
    Intelligence:"

- assertVisible: "Description:"